# localscribe

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
localscribe/: __main__.py  asr.py  audio.py  pipeline.py  speakers.py  whisper_asr.py
macos/: README.md
macos/LocalScribeRecorder/LocalScribeRecorder/: AppState.swift  AudioMixer.swift  Info.plist  LocalScribeRecorderApp.swift  MenuContentView.swift  MicRecorder.swift  Settings.swift  SystemAudioRecorder.swift  Transcriber.swift
macos/LocalScribeRecorder/LocalScribeRecorder.xcodeproj/: project.pbxproj
models/: download_models.sh
voice_rec/: __init__.py  __main__.py  enroll.py  report.py
